# Computer-Graphics

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md
1 - Learning about CG/: README.md
2 - GUI and Draw simple graphics/: .editorconfig  CMakeLists.txt  README.md
2 - GUI and Draw simple graphics/src/: CMakeLists.txt  homework2.cpp
3 - Draw line/: CMakeLists.txt  README.md
3 - Draw line/src/: CMakeLists.txt  homework3.cpp
4 - Transformation/: CMakeLists.txt  README.md
4 - Transformation/include/: homework4.hpp
4 - Transformation/src/: homework4.cpp
5 - Camera/: CMakeLists.txt  README.md
5 - Camera/include/: camera.h
5 - Camera/resources/shaders/: coordinate_systems.fs.glsl  coordinate_systems.vs.glsl
5 - Camera/src/: CMakeLists.txt
6 - Lights and Shading/: .gitignore  CMakeLists.txt  README.md
6 - Lights and Shading/include/: homework6.hpp
6 - Lights and Shading/resources/shaders/: gouraud.fs.glsl  gouraud.vs.glsl  phong.fs.glsl  simple.fs.glsl
6 - Lights and Shading/src/: CMakeLists.txt
7 - Shadowing Mapping/: CMakeLists.txt  README.md
7 - Shadowing Mapping/resources/shaders/: phong.vs.glsl  triangles.frag.glsl
7 - Shadowing Mapping/src/: homework7.cpp  triangles.cpp.opengl45
8 - Bezier Curve/: CMakeLists.txt  README.md
8 - Bezier Curve/resources/shaders/: gouraud.fs.glsl  light.fs.glsl  light.vs.glsl  model.fs.glsl  shadow.vs.glsl  simple.vs.glsl  triangles.vert.glsl
8 - Bezier Curve/src/: CMakeLists.txt  homework8.cpp
docs/: Mathematics for 3D Game Programming and Computer Graphics 3rd.md
glad/include/glad/: glad.h
include/: create_window.hpp  hardway.hpp  hello_triangle.hpp  homework2.hpp  homework3.hpp  homework4.hpp  homework5.hpp  homework6.hpp  homework7.hpp  homework8.hpp  hw_triangle.hpp  opengl_helper.hpp  playground.hpp
playground/: CMakeLists.txt
playground/include/: test.hpp
playground/src/: test.cpp
projects/OpenGL-Hardway/: CMakeLists.txt  README.md
projects/OpenGL-Playground/: .gitignore  README.md
projects/OpenGL-Playground/glad/src/: glad.c
projects/OpenGL-Playground/playground-assimp/: CMakeLists.txt
projects/OpenGL-Playground/playground-assimp/resources/shaders/: light.vs.glsl  phong.fs.glsl
projects/OpenGL-Playground/playground-glm/: CMakeLists.txt  main.cpp
projects/OpenGL-Playground/playground-imgui/: CMakeLists.txt
projects/OpenGL-Playground/playground-imgui/src/: CMakeLists.txt  imgui_impl_glfw_gl3.cpp  main.cpp
projects/OpenGL-Playground/playground/src/: CMakeLists.txt  test.cpp
projects/hardway/: README.md
projects/hardway/include/: hello_triangle.hpp
projects/hardway/src/: CMakeLists.txt  hello_triangle.cpp  hello_triangle_hw.cpp  hello_window.cpp
resources/shaders/: coordinate_systems.fs.glsl  gouraud.vs.glsl  model.fs.glsl  model.vs.glsl  phong.fs.glsl  shadow.fs.glsl  simple.fs.glsl
shader/: colorful.fs.glsl  simpile.vs.glsl
src/: CMakeLists.txt  create_window.cpp  hardway.cpp  hello_triangle.cpp  homework2.cpp  homework3.cpp  homework4.cpp  homework5.cpp  homework6.cpp  homework7.cpp  homework8.cpp  hw_triangle.cpp  imgui_impl_glfw_gl3.cpp  opengl_helper.cpp  playground.cpp  set_pixel.cpp  triangles.cpp
